# serializer version: 1
# name: TestETLegacyGenerator.test_generate
  tuple(
    list([
      'etl',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestETLegacyGenerator.test_generate[config]
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta cl_lang "en"
  seta ui_cl_lang "en"
  
  '''
# ---
# name: TestETLegacyGenerator.test_generate_existing
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta cl_lang "en"
  seta ui_cl_lang "en"
  seta foo "bar"
  seta r_centerWindow "1"
  
  '''
# ---
# name: TestETLegacyGenerator.test_generate_language
  '''
  seta r_mode "-1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta cl_lang "af"
  seta ui_cl_lang "af"
  
  '''
# ---
# name: TestETLegacyGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ESC',
      'pause': 'KEY_ESC',
    }),
    'name': 'etlegacy',
  })
# ---
